# visible-polygon-extractor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  macos_env.sh
src/: basic-definitions.h  debug-output-writer.cpp  debug-output-writer.h  ground-polygon-calculator.cpp  ground-polygon-calculator.h  main.cpp  rs-helpers.cpp  rs-helpers.h  visible-polygon-extractor.cpp  visible-polygon-extractor.h
